@@ -14,7 +14,6 @@ import uk.gov.hmcts.et.taskconfiguration.DmnDecisionTableBaseUnitTest;
 import uk.gov.hmcts.et.taskconfiguration.utility.HelperService;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -108,7 +107,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
                 .toList();
 
         // Then
-        assertEquals("Unknown v Unknown", resultList.get(0).get("value"));
+        assertEquals("Unknown v Unknown", resultList.getFirst().get("value"));
     }
 
     public static Stream<Arguments> claimantName_ScenarioProvider() {
@@ -147,7 +146,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
                 .toList();
 
         // Then
-        assertEquals(expectedCaseName, resultList.get(0).get("value"));
+        assertEquals(expectedCaseName, resultList.getFirst().get("value"));
     }
 
     @ParameterizedTest
@@ -171,7 +170,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
                 .toList();
 
         // Then
-        assertEquals(expectedCaseName, resultList.get(0).get("value"));
+        assertEquals(expectedCaseName, resultList.getFirst().get("value"));
     }
 
     public static Stream<Arguments> respondentName_ScenarioProvider() {
@@ -295,12 +294,12 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("workType"))
+                .filter(r -> r.containsValue("workType"))
                 .toList();
 
-        assertEquals(expected.get(0).get("name"), resultList.get(0).get("name"));
-        assertEquals(expected.get(0).get("value"), resultList.get(0).get("value"));
-        assertEquals(expected.get(0).get("canReconfigure"), resultList.get(0).get("canReconfigure"));
+        assertEquals(expected.getFirst().get("name"), resultList.getFirst().get("name"));
+        assertEquals(expected.getFirst().get("value"), resultList.getFirst().get("value"));
+        assertEquals(expected.getFirst().get("canReconfigure"), resultList.getFirst().get("canReconfigure"));
     }
 
     public static Stream<Arguments> workType_ScenarioProvider() {
@@ -352,6 +351,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
 
             Arguments.of("IssuePostHearingDirection", hearingWork),
             Arguments.of("IssueJudgment", hearingWork),
+            Arguments.of("IssueOrder", hearingWork),
 
             Arguments.of("ContactTribunalWithAnApplication", applications),
             Arguments.of("AmendClaimantDetails", applications),
@@ -378,12 +378,12 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("roleCategory"))
+                .filter(r -> r.containsValue("roleCategory"))
                 .toList();
 
-        assertEquals(expected.get(0).get("name"), resultList.get(0).get("name"));
-        assertEquals(expected.get(0).get("value"), resultList.get(0).get("value"));
-        assertEquals(expected.get(0).get("canReconfigure"), resultList.get(0).get("canReconfigure"));
+        assertEquals(expected.getFirst().get("name"), resultList.getFirst().get("name"));
+        assertEquals(expected.getFirst().get("value"), resultList.getFirst().get("value"));
+        assertEquals(expected.getFirst().get("canReconfigure"), resultList.getFirst().get("canReconfigure"));
     }
 
     public static Stream<Arguments> roleCategory_ScenarioProvider() {
@@ -433,6 +433,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             Arguments.of("ListAHearing", administrator),
             Arguments.of("IssuePostHearingDirection", administrator),
             Arguments.of("IssueJudgment", administrator),
+            Arguments.of("IssueOrder", administrator),
             Arguments.of("ContactTribunalWithAnApplication", administrator),
             Arguments.of("AmendClaimantDetails", administrator),
             Arguments.of("AmendRespondentDetails", administrator),
@@ -461,14 +462,14 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("description"))
+                .filter(r -> r.containsValue("description"))
                 .toList();
 
-        assertEquals(expected.get(0).get("name"), resultList.get(0).get("name"));
-        assertEquals(expected.get(0).get("value")
+        assertEquals(expected.getFirst().get("name"), resultList.getFirst().get("name"));
+        assertEquals(expected.getFirst().get("value")
                          .replace("${[roleAssignmentId]}", roleAssignmentId)
-                         .replace("${[taskId]}", taskId), resultList.get(0).get("value"));
-        assertEquals(expected.get(0).get("canReconfigure"), resultList.get(0).get("canReconfigure"));
+                         .replace("${[taskId]}", taskId), resultList.getFirst().get("value"));
+        assertEquals(expected.getFirst().get("canReconfigure"), resultList.getFirst().get("canReconfigure"));
     }
 
     public static Stream<Arguments> description_ScenarioProvider() {
@@ -537,7 +538,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
         ));
         List<Map<String, Object>> descDraftJudgment = List.of(Map.of(
             "name", "description",
-            "value", "[Draft and Sign Judgement](/cases/case-details/${[CASE_REFERENCE]}"
+            "value", "[Draft and Sign Judgment/Order](/cases/case-details/${[CASE_REFERENCE]}"
                 + "/trigger/draftAndSignJudgement/draftAndSignJudgement1)",
             "canReconfigure", true
         ));
@@ -553,15 +554,16 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
         ));
         List<Map<String, Object>> descIssueJudgment = List.of(Map.of(
             "name", "description",
-            "value", "[View Judgment](/cases/case-details/${[CASE_REFERENCE]}#Judgements) and "
+            "value", "[View Judgment](/cases/case-details/${[CASE_REFERENCE]}#Judgments) and "
                 + "[Issue Judgment](/cases/case-details/${[CASE_REFERENCE]}"
                 + "/trigger/addAmendJudgment/addAmendJudgment1)",
             "canReconfigure", true
         ));
-        List<Map<String, Object>> descReviewECCResponse = List.of(Map.of(
+        List<Map<String, Object>> descIssueOrder = List.of(Map.of(
             "name", "description",
-            "value", "[Create Referral](/cases/case-details/${[CASE_REFERENCE]}"
-                + "/trigger/createReferral/createReferral1)",
+            "value", "[View Order](/cases/case-details/${[CASE_REFERENCE]}#Judgments) and "
+                     + "[Issue Order](/cases/case-details/${[CASE_REFERENCE]}"
+                     + "/trigger/sendNotification/sendNotification1)",
             "canReconfigure", true
         ));
         List<Map<String, Object>> reviewAccessRequest = List.of(Map.of(
@@ -586,6 +588,18 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             "name", "description",
             "value", "**Review the Application**. You can also [Send a new referral](/cases/case-details/"
                 + "${[CASE_REFERENCE]}/trigger/createReferral/createReferral1)",
+            "canReconfigure", true
+        ));
+        List<Map<String, Object>> descUpdateRespondentDetails = List.of(Map.of(
+            "name", "description",
+            "value", "[Update Respondent's Details](/cases/case-details/${[CASE_REFERENCE]}"
+                + "/trigger/amendRespondentDetails/amendRespondentDetails1)",
+            "canReconfigure", true
+        ));
+        List<Map<String, Object>> descReferEmployersContractClaim = List.of(Map.of(
+            "name", "description",
+            "value", "[Refer Employer's Contract Claim](/cases/case-details/${[CASE_REFERENCE]}/trigger/"
+                + "createReferral/createReferral1)",
             "canReconfigure", true
         ));
 
@@ -613,6 +627,9 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
 
             Arguments.of("Rule21", descET3Processing),
             Arguments.of("ET3Processing", descET3Processing),
+            Arguments.of("ReviewECCResponse", descUpdateRespondentDetails),
+
+            Arguments.of("ReferEmployersContractClaim", descReferEmployersContractClaim),
 
             Arguments.of("ReviewRule21Referral", descReviewRule21Referral),
 
@@ -624,8 +641,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             Arguments.of("WithdrawAllOrPartOfCase", createReferral),
 
             Arguments.of("IssueJudgment", descIssueJudgment),
-
-            Arguments.of("ReviewECCResponse", descReviewECCResponse),
+            Arguments.of("IssueOrder", descIssueOrder),
 
             Arguments.of("reviewSpecificAccessRequestJudiciary", reviewAccessRequest),
             Arguments.of("reviewSpecificAccessRequestAdmin", reviewAccessRequest),
@@ -657,7 +673,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("additionalProperties_roleAssignmentId"))
+                .filter(r -> r.containsValue("additionalProperties_roleAssignmentId"))
                 .toList();
 
         assertTrue(resultList.contains(Map.of(
@@ -693,57 +709,59 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("dueDateIntervalDays"))
+                .filter(r -> r.containsValue("dueDateIntervalDays"))
                 .toList();
 
-        assertEquals(expectedIntervalDays.get(0).get("name"), intervalDaysResultList.get(0).get("name"));
-        assertEquals(expectedIntervalDays.get(0).get("value"), intervalDaysResultList.get(0).get("value"));
+        assertEquals(expectedIntervalDays.getFirst().get("name"), intervalDaysResultList.getFirst().get("name"));
+        assertEquals(expectedIntervalDays.getFirst().get("value"), intervalDaysResultList.getFirst().get("value"));
         assertEquals(
-            expectedIntervalDays.get(0).get("canReconfigure"),
-            intervalDaysResultList.get(0).get("canReconfigure")
+            expectedIntervalDays.getFirst().get("canReconfigure"),
+            intervalDaysResultList.getFirst().get("canReconfigure")
         );
 
         List<Map<String, Object>> majorPriorityResultList =
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("majorPriority"))
+                .filter(r -> r.containsValue("majorPriority"))
                 .toList();
 
-        assertEquals(expectedMajor.get(0).get("name"), majorPriorityResultList.get(0).get("name"));
-        assertEquals(expectedMajor.get(0).get("value"), majorPriorityResultList.get(0).get("value"));
-        assertEquals(expectedMajor.get(0).get("canReconfigure"), majorPriorityResultList.get(0).get("canReconfigure"));
+        assertEquals(expectedMajor.getFirst().get("name"), majorPriorityResultList.getFirst().get("name"));
+        assertEquals(expectedMajor.getFirst().get("value"), majorPriorityResultList.getFirst().get("value"));
+        assertEquals(expectedMajor.getFirst().get("canReconfigure"),
+                     majorPriorityResultList.getFirst().get("canReconfigure"));
 
         List<Map<String, Object>> minorPriorityResultList =
             dmnDecisionTableResult
                 .getResultList()
                 .stream()
-                .filter((r) -> r.containsValue("minorPriority"))
+                .filter(r -> r.containsValue("minorPriority"))
                 .toList();
 
-        assertEquals(expectedMinor.get(0).get("name"), minorPriorityResultList.get(0).get("name"));
-        assertEquals(expectedMinor.get(0).get("value"), minorPriorityResultList.get(0).get("value"));
-        assertEquals(expectedMinor.get(0).get("canReconfigure"), minorPriorityResultList.get(0).get("canReconfigure"));
+        assertEquals(expectedMinor.getFirst().get("name"), minorPriorityResultList.getFirst().get("name"));
+        assertEquals(expectedMinor.getFirst().get("value"), minorPriorityResultList.getFirst().get("value"));
+        assertEquals(expectedMinor.getFirst().get("canReconfigure"),
+                     minorPriorityResultList.getFirst().get("canReconfigure"));
 
         if (expectedPriorityDateOrigin != null) {
             List<Map<String, Object>> priorityDateRefResultList =
                 dmnDecisionTableResult
                     .getResultList()
                     .stream()
-                    .filter((r) -> r.containsValue("priorityDateOriginRef"))
+                    .filter(r -> r.containsValue("priorityDateOriginRef"))
                     .toList();
 
             assertEquals(
-                expectedPriorityDateOrigin.get(0).get("name"),
-                priorityDateRefResultList.get(0).get("name")
+                expectedPriorityDateOrigin.getFirst().get("name"),
+                priorityDateRefResultList.getFirst().get("name")
             );
             assertEquals(
-                expectedPriorityDateOrigin.get(0).get("value"),
-                priorityDateRefResultList.get(0).get("value")
+                expectedPriorityDateOrigin.getFirst().get("value"),
+                priorityDateRefResultList.getFirst().get("value")
             );
             assertEquals(
-                expectedPriorityDateOrigin.get(0).get("canReconfigure"),
-                priorityDateRefResultList.get(0).get("canReconfigure")
+                expectedPriorityDateOrigin.getFirst().get("canReconfigure"),
+                priorityDateRefResultList.getFirst().get("canReconfigure")
             );
         }
 
@@ -752,25 +770,30 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
                 dmnDecisionTableResult
                     .getResultList()
                     .stream()
-                    .filter((r) -> r.containsValue("priorityDateOriginEarliest"))
+                    .filter(r -> r.containsValue("priorityDateOriginEarliest"))
                     .toList();
 
             assertEquals(
-                expectedPriorityDateEarliest.get(0).get("name"),
-                priorityDateEarResultList.get(0).get("name")
+                expectedPriorityDateEarliest.getFirst().get("name"),
+                priorityDateEarResultList.getFirst().get("name")
             );
             assertEquals(
-                expectedPriorityDateEarliest.get(0).get("value"),
-                priorityDateEarResultList.get(0).get("value")
+                expectedPriorityDateEarliest.getFirst().get("value"),
+                priorityDateEarResultList.getFirst().get("value")
             );
             assertEquals(
-                expectedPriorityDateEarliest.get(0).get("canReconfigure"),
-                priorityDateEarResultList.get(0).get("canReconfigure")
+                expectedPriorityDateEarliest.getFirst().get("canReconfigure"),
+                priorityDateEarResultList.getFirst().get("canReconfigure")
             );
         }
     }
 
     public static Stream<Arguments> priority_ScenarioProvider() {
+        List<Map<String, Object>> dueDateIntervalDays0 = List.of(Map.of(
+            "name", "dueDateIntervalDays",
+            "value", "0",
+            "canReconfigure", true
+        ));
         List<Map<String, Object>> dueDateIntervalDays1 = List.of(Map.of(
             "name", "dueDateIntervalDays",
             "value", "1",
@@ -874,9 +897,11 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
                          dueDateIntervalDays1, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
             ),
             Arguments.of("ReviewECCResponse", NOT_URGENT,
-                         dueDateIntervalDays1, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
+                         dueDateIntervalDays3, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
             ),
-
+            Arguments.of("ReferEmployersContractClaim", NOT_URGENT,
+                         dueDateIntervalDays0, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
+            ),
             Arguments.of("Rule21", NOT_URGENT,
                          dueDateIntervalDays2, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
             ),
@@ -905,6 +930,9 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
             ),
             Arguments.of("IssueJudgment", NOT_URGENT,
                          dueDateIntervalDays5, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
+            ),
+            Arguments.of("IssueOrder", NOT_URGENT,
+                dueDateIntervalDays5, defaultMajorPriority, defaultMinorPriority, priorityDateOriginRef, null
             ),
 
             Arguments.of("ListAHearing", NOT_URGENT,
@@ -975,8 +1003,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
         inputVariables.putValue("taskAttributes", Map.of("taskType", "DraftAndSignJudgment"));
 
         LocalDateTime fixedNow = LocalDateTime.of(2024, 1, 1, 12, 0);
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss");
-        String expectedDueDateOrigin = fixedNow.format(formatter);
+
         caseData.put("hearingDetailsCollection", Map.of(
             "hearingDetailsCollection", List.of(Map.of(
                 "hearingDetailsDate", fixedNow
@@ -1065,7 +1092,7 @@ class EmploymentTaskConfigurationTestEW extends DmnDecisionTableBaseUnitTest {
         //The purpose of this test is to prevent adding new rows without being tested
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
 
-        assertThat(logic.getRules().size(), is(63));
+        assertThat(logic.getRules().size(), is(68));
     }
 
     private List<Map<String, Object>> getExpectedValues() {
